# snippets

./: .gitignore  README.md
BaseResourceToSpreadsheet/: ArchetypeBatchConvertWithTemplate.py  ArchetypeToSpreadsheet.py  ArchetypeToSpreadsheet_v1.py  BaseResourceToSpreadsheet.py  R4ToSpreadsheet.py  README.md  regression_expectations.json  regression_test_plan.md  template.xlsx  templatemixer.py  test_archetype_regression.py  test_archetype_regression_v5.py
CheckDisplayValues/: CheckDisplayValues.sln  README.md
Conformancelab-Playwright/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
Conformancelab-Playwright/config/: bulk-testsets.toml  bulk.local.example.toml  config.py
Conformancelab-Playwright/tests/: conftest.py  helpers.py  test_regressie.py
Conformancelab-Playwright/tests/bulk/: conftest.py  test_regression.py
Conformancelab-Playwright/tests/webapp/: conftest.py  test_admin.py
Conformancelab-Playwright/utils/auth/: __init__.py  login_once.py
Conformancelab-Playwright/utils/common/: __init__.py  extract_testset.py  logger.py  unieke_combinaties_all.json
Conformancelab-Playwright/utils/mp9_helpers/: __init__.py  extract_unique_combinations.py  unique_combinations_medmij.json  unique_combinations_mo.json
DisplayGitBranches/: git-branches.sh
HAPI-in-Docker/: README.md  config.yaml  docker-compose.yaml
InsertIdentifier/: temp-insertIdentifier.xsl
NTS-proxy/: Dockerfile  NTS-proxy.py  README.md  docker-compose.yml
RepoRearrange/: Migratie-HL7-mappings.md  README.md  split-Beelden.sh  split-MP.sh  (+5 more)
(+24 files in other folders)
